--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -3,4 +3,4 @@ log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.conversionPattern = [%p] %d{yyyy-MM-dd HH:mm:ss} %m %n
 
-log4j.logger.com.baizhi.dao = DEBUG
+log4j.logger.com.wl.dao = DEBUG
